# fsv-gtk3

./: .gitignore  Makefile.am  README.md  TODO  configure.ac  configure.in  configure~  fsvrc.sample  meson.build
debug/: Makefile.am
doc/: fsv.sgml  startup.html
lib/: Makefile.am  meson.build  nvstore.c  nvstore.h
po/: fsv.pot
src/: Makefile.am  about.c  animation.c  animation.h  callbacks.c  callbacks.h  camera.c  camera.h  colexp.c  color.c  color.h  common.c  common.h  dialog.c  dialog.h  dirtree.c  filelist.c  fsv.c  geometry.c  geometry.h  gui.c  gui.h  ogl.c  ogl.h  scanfs.c  search.c  tmaptext.c  viewport.c  viewport.h  window.c
